Authentication, post, view edited

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		    <meta charset='utf-8'>
-		        <title>EAC Test Page</title>
+		<meta charset='utf-8'>
+		<title>EAC Test Page</title>
 	</head>
 	<body>
 		<h1>EAC Test Page</h1>
 		<h3>서비스 점검중입니다.</h3>
 		<br><br>
-		<a href='http://ec2-3-16-154-62.us-east-2.compute.amazonaws.com/test.php'>DB Query</a>
+		<input type='button' value='회원가입' onclick="location.href='http://ec2-3-16-154-62.us-east-2.compute.amazonaws.com/jin/signup.php'">
+		<input type='button' value='판매 요청 게시판' onclick="location.href='http://ec2-3-16-154-62.us-east-2.compute.amazonaws.com/jin/'"><br><br>
+		<input type='button' value='phpMyAdmin' onclick="location.href='http://ec2-3-16-154-62.us-east-2.compute.amazonaws.com/phpMyAdmin'">
 	</body>
 </html>
+
+
+
+
